Refactor and latency minimization